--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react-responsive": "^8.0.8",
+    "@vercel/analytics": "^1.5.0",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.14.4",
     "lucide-react": "^0.468.0",
